# am-db

./: .gitignore  .gitmodules  CMakeLists.txt  amdb.flag  build.bash  main.cc
amdb/: CMakeLists.txt
amdb/common/: CMakeLists.txt  assert.h  common.cc  const.h  log.h  version.h
amdb/proto/: CMakeLists.txt  bptree.proto  schema.proto  statistics.proto
amdb/sql/: CMakeLists.txt  main.cc
amdb/sql/analyzer/: analyzer.cc  analyzer.h  analyzer_test.cc  create_analyzer.cc  create_analyzer.h  expr_analyzer.cc  expr_analyzer.h  insert_analyzer.cc  insert_analyzer.h  select_analyzer.cc  select_analyzer.h
amdb/sql/chunk/: chunk.cc  chunk.h  chunk_test.cc  chunk_util.cc  chunk_util.h  column.cc  column.h  column_description.cc  column_description.h  column_test.cc  iterator.cc  iterator.h  row.cc  row.h  row_description.cc  row_description.h  row_test.cc
amdb/sql/codec/: codec.cc  codec.h  codec_test.cc  common.h  kv_codec.cc  kv_codec.h  rc_codec.cc  rc_codec.h  rccodec.cc  rccodec.h  schema_codec.cc  schema_codec.h  statistic_codec.cc  statistic_codec.h
amdb/sql/common/: arena.h  arena_test.cc  cmp.h  statuscode.cc  statuscode.h  statuscode.inc
amdb/sql/context/: statement_context.cc  statement_context.h
amdb/sql/executor/: create_executor.cc  create_executor.h  executor_util.cc  executor_util.h  filter_executor.cc  filter_executor.h  insert_executor.cc  insert_executor.h  resultset_executor.cc  resultset_executor.h  table_scan_executor.cc  table_scan_executor.h
amdb/sql/expression/: expr_cmp.h  expr_node.cc  expr_node.h  expr_value.cc  expr_value.h  expr_value_type.cc  expr_value_type.h  literal_expr.cc  literal_expr.h
amdb/sql/optimizer/: README.md  optimizer.h  planner.cc  planner.h
amdb/sql/optimizer/cascades/: apply_rule_task.cc  apply_rule_task.h  cascades.cc  cascades.h  explore_group_task.cc  explore_group_task.h  memo.cc  memo.h  optimize_expr_task.cc  optimize_expr_task.h  optimize_group_task.cc  optimize_group_task.h  optimize_inputs_task.cc  optimize_inputs_task.h  placeholder.h  task.cc  task.h
amdb/sql/optimizer/costs/: adaptive_cost.cc  adaptive_cost.h  cost_model.h  opt_cost.cc  opt_cost.h  opt_cost_test.cc
amdb/sql/optimizer/heuristics/: heuristics.cc  heuristics.h
amdb/sql/optimizer/rules/: enumerable_filter_rule.cc  enumerable_filter_rule.h  enumerable_resultset_rule.cc  enumerable_resultset_rule.h  enumerable_table_scan_rule.cc  enumerable_table_scan_rule.h  predicate_pushdown.cc  predicate_pushdown.h  rule.cc  rule.h  rule_matcher.cc  rule_matcher.h  rules.h
amdb/sql/parser/: CMakeLists.txt  README.md  base.h  ddl.h  dml.h  expr.cc  expr.h  misc.h  parser.cc  parser.h  parser_test.cc  sql_lex.l  sql_parse.y  utils.h
amdb/sql/plan/: cost.h  create_database.cc  create_database.h  create_table.cc  create_table.h  filter.cc  filter.h  insert.cc  insert.h  logical_props.cc  logical_props.h  physical_props.cc  physical_props.h  physical_props_def.cc  physical_props_def.h  range.h  rel_opt_cost.cc  rel_opt_cost.h  rel_opt_node.cc  rel_opt_node.h  rel_opt_node_test.cc  rel_opt_planner.cc  rel_opt_planner.h  rel_opt_rule.cc  rel_opt_rule.h  rel_opt_rule_test.cc  rel_opt_schema.cc  rel_opt_schema.h  rel_opt_table.cc  rel_opt_table.h  rel_trait_set.cc  rel_trait_set.h  result_set.cc  result_set.h  table_scan.cc  table_scan.h
amdb/sql/planner/: logical_plan_node.cc  logical_plan_node.h  physical_plan_node.cc  physical_plan_node.h  plan_node.h  plan_node_util.cc  plan_node_util.h  plan_node_visitor.cc  plan_node_visitor.h  plan_node_visitor_test.cc  planner.cc  planner.h  planner_test.cc  range.h  range_cmp.h  range_cmp_test.cc
amdb/sql/resolver/: resolver.cc  resolver.h
amdb/sql/scheduler/: executing_graph.cc  executing_graph.h  executor.cc  executor.h  executor_test.cc  port.cc  port.h  scheduler.cc  scheduler.h  scheduler_test.cc  sink.cc  sink.h  source.cc  source.h  transform.cc  transform.h
amdb/sql/schema/: schema.cc  schema.h  schema_test.cc  schema_type.h
amdb/sql/statistics/: histogram.cc  histogram.h  histogram_test.cc  statistic.cc  statistic.h  statistic_test.cc  statistics.cc  statistics.h  statistics_test.cc
amdb/sql/storage/: bplus_tree.cc  bplus_tree.h  bplus_tree_Iterator.cc  bplus_tree_Iterator.h  bplus_tree_cmp.h  bplus_tree_iterator.cc  bplus_tree_iterator.h  bplus_tree_iterator_test.cc  bplus_tree_node.cc  bplus_tree_node.h  bplus_tree_statistics.h  bplus_tree_test.cc  bpt_tree_node_test.cc  bptree_node.cc  bptree_node.h  data_cmp.h  id_allocator.cc  id_allocator.h  id_allocator_test.cc  index.cc  index.h  index_iterator.cc  index_iterator.h  index_iterator_test.cc  index_test.cc  iterator.cc  iterator.h  iterator_test.cc  kv_data_testutil.h  kv_storage.cc  kv_storage.h  kv_storage_api.cc  kv_storage_api.h  kv_storage_test.cc  kv_storage_util.cc  kv_storage_util.h  leveldb_client.cc  leveldb_client.h  leveldb_client_test.cc  metadata.cc  (+7 more)
amdb/sql/testsuite/: data_gen_test.cc  data_gen_testutil.cc  data_gen_testutil.h  kv_data_testutil.h  print_testutil.cc  print_testutil.h  schema_gen_testutil.cc  schema_gen_testutil.h  table_gen_testutil.cc  table_gen_testutil.h  table_testutil.h
amdb/sql/testutil/: data_gen_test.cc  data_gen_testutil.cc
