CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(amdb)

SET(CMAKE_CXX_STANDARD 20)

FIND_PROGRAM(CCACHE_PROGRAM ccache)
IF(CCACHE_PROGRAM)
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK "${CCACHE_PROGRAM}")
ENDIF()

ADD_SUBDIRECTORY(third-party)


ADD_EXECUTABLE(a.out main.cc)
TARGET_LINK_LIBRARIES(a.out gflags glog)
