CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(amdb)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS -fPIC)

# ADD_COMPILE_OPTIONS(-fsanitize=address)
# ADD_LINK_OPTIONS(-fsanitize=address)

## ccache
FIND_PROGRAM(CCACHE_PROGRAM ccache)
IF (CCACHE_PROGRAM)
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK "${CCACHE_PROGRAM}")
ENDIF ()

IF (POLICY CMP0077)
  CMAKE_POLICY(SET CMP0077 NEW)
ENDIF (POLICY CMP0077)


## git
SET(GIT_COMMIT_ID "unknown_git_commit")
IF (CMAKE_BUILD_TYPE MATCHES "Rel")
  EXECUTE_PROCESS(
      COMMAND git rev-parse HEAD
      OUTPUT_VARIABLE GIT_COMMIT_ID
      OUTPUT_STRIP_TRAILING_WHITESPACE
  )
ENDIF ()
ADD_DEFINITIONS(-DGIT_COMMIT_ID="${GIT_COMMIT_ID}")

## ctest
OPTION(AMDB_BUILD_TEST "Build unit tests of AMDB" ON)
IF (AMDB_BUILD_TEST)
  ENABLE_TESTING()
ENDIF ()

###############################################

ADD_SUBDIRECTORY(amdb)
ADD_SUBDIRECTORY(third-party)